# trcks

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/actions/run-pre-commit/: action.yml
.github/actions/run-tests-and-type-checks/: action.yml
.github/actions/set-up-pre-commit/: action.yml
.github/actions/set-up-uv/: action.yml
.github/instructions/: review.instructions.md
.github/workflows/: continuous-integration.yml  copilot-setup-steps.yml
docs/: AGENTS.md  frequently-asked-questions.md  glossary.md  index.md  motivation.md  setup.md  trcks.fp.composition.md  trcks.fp.md  trcks.fp.monads.awaitable.md  trcks.fp.monads.awaitable_result.md  trcks.fp.monads.identity.md  trcks.fp.monads.md  trcks.fp.monads.result.md  trcks.oop.AwaitableResultWrapper.md  trcks.oop.AwaitableWrapper.md  trcks.oop.ResultWrapper.md  trcks.oop.Wrapper.md  trcks.oop.md  usage.md
docs/motivation/: railway-oriented-programming.md  trcks.md
docs/reference/: trcks.exceptions.TrcksError.md  trcks.exceptions.TrcksFrozenInstanceError.md  trcks.exceptions.TrcksTypeError.md  trcks.exceptions.md  trcks.fp.md  trcks.fp.monads.awaitable_result_sequence.md  trcks.fp.monads.awaitable_result_tuple.md  trcks.fp.monads.awaitable_tuple.md  trcks.fp.monads.identity.md  trcks.fp.monads.md  trcks.fp.monads.result_sequence.md  trcks.fp.monads.result_tuple.md  trcks.fp.monads.tuple.md  trcks.fp.monads.tuple_.md  trcks.oop.AbstractAwaitableWrapper.md  trcks.oop.AbstractWrapper.md  trcks.oop.AwaitableResultSequenceWrapper.md  trcks.oop.AwaitableResultTupleWrapper.md  trcks.oop.AwaitableSequenceWrapper.md  trcks.oop.AwaitableTupleWrapper.md  trcks.oop.BaseAwaitableWrapper.md  trcks.oop.BaseWrapper.md  trcks.oop.ResultSequenceWrapper.md  trcks.oop.ResultTupleWrapper.md  trcks.oop.SequenceWrapper.md  trcks.oop.TupleWrapper.md  trcks.oop.Wrapper.md  trcks.oop.md
docs/usage/: oop-and-fp-equivalence.md  railway-oriented-programming-with-trcks-fp.md  railway-oriented-programming-with-trcks-oop.md  tuple-types-provided-by-trcks.md
src/trcks/: __init__.py  _pattern_matching.py  _type_aliases.py  _typing.py  _typing_extensions.py  exceptions.py  oop.py  types_.py
src/trcks/fp/: __init__.py  composition.py
src/trcks/fp/monad/: awaitable.py  awaitable_dual.py  awaitable_dual_track.py  awaitable_either.py  awaitable_result.py  dual.py  dual_track.py  either.py  result.py
src/trcks/fp/monads/: awaitable.py  awaitable_result.py  awaitable_result_sequence.py  awaitable_result_tuple.py  awaitable_sequence.py  awaitable_tuple.py  identity.py  result.py  result_sequence.py  result_tuple.py  sequence.py  tuple.py  tuple_.py
src/trcks/oop/: __init__.py  _abstract_awaitable_wrapper.py  _abstract_wrapper.py  _async_dual_track.py  _async_single_track.py  _async_track.py  _awaitable_railway.py  _awaitable_result_railway.py  _awaitable_result_tuple_wrapper.py  _awaitable_result_wrapper.py  _awaitable_tuple_wrapper.py  _awaitable_wrapper.py  _base_awaitable_railway.py  _base_awaitable_wrapper.py  _base_railway.py  _base_wrapper.py  _dual_track.py  _railway.py  _result_railway.py  _result_tuple_wrapper.py  _result_wrapper.py  _single_track.py  _track.py  _tuple_wrapper.py  _wrapper.py  async_dual_track.py  async_single_track.py  awaitable_dual_track.py  awaitable_single_track.py  dual_track.py  single_track.py
test/trcks/fp/monad/: test_either.py
tests/trcks/: test_oop.py  test_tuple_aliases.py
tests/trcks/fp/: test_composition.py
tests/trcks/fp/monad/: test_dual.py  test_dual_track.py  test_result.py
tests/trcks/fp/monads/: test_awaitable_result.py  test_result.py  test_result_tuple.py
