[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core>=3.2,<4"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pydoctor>=24.11.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.7",
]

[project]
dependencies = [
    "typing-extensions>=4.12.2 ; python_full_version < '3.13'",
]
description = "Add your description here"
name = "trcks"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[tool.mypy]
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_redefinition = true
disallow_untyped_globals = true
files = "."
strict = true
strict_bytes = true  # will become the default in mypy 2.0
warn_incomplete_stub = true
warn_unreachable = true

[tool.pydoctor]
add-package = ["src/trcks"]
intersphinx = [
    "https://docs.python.org/3/objects.inv",
    "https://typing-extensions.readthedocs.io/en/latest/objects.inv",
]
project-name = "trcks"
warnings-as-errors = true

[tool.pytest.ini_options]
addopts = "--cov=trcks --cov-fail-under=100 --cov-report term-missing --doctest-modules"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = ["COM812", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/trcks/fp/*" = ["D"]
"tests/*" = ["D", "INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"
