[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend >= 2.4, < 3"]  # pdm-backend 2.4 supports project.license-files.

[dependency-groups]
dev = [
    "import-linter >= 2.9",
    "markdown-pycon >= 1.0.1",
    "mkdocs-material >= 9.7.1",
    "mkdocstrings[python] >= 1.0.1",
    "mypy >= 1", # Check project.optional-dependencies for lower bound.
    "pre-commit >= 4.5.1",
    "pyright[nodejs] >= 1", # Check project.optional-dependencies for lower bound.
    "pytest >= 9.0.2",
    "pytest-asyncio >= 1.3.0",
    "pytest-cov >= 7.0.0",
    "pytest-doctestplus >= 1.7.1",
]

[project]
authors = [{ name = "Christoph Gietl" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typing-extensions >= 4.12 ; python_full_version < '3.13'",
]
description = "Type-safe railway-oriented programming (ROP)"
dynamic = ["version"]
keywords = [
    "composition",
    "control flow",
    "error handling",
    "fp",
    "functional programming",
    "monad",
    "object-oriented programming",
    "oop",
    "pipeline",
    "railway-oriented programming",
    "result type",
    "rop",
    "static typing",
    "type safety",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
maintainers = [{ name = "Christoph Gietl" }]
name = "trcks"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
mypy = [
    # mypy versions older than 1.16 seem to have issues
    # with type narrowing in match statements:
    "mypy >= 1.16",
]
pyright = [
    # pyright versions older than 1.1.391 seem to have issues
    # with reachability analysis in match statements:
    "pyright >= 1.1.391",
    # pyright 1.1.406 and older report false positives for Python 3.14
    # (cf. https://github.com/microsoft/pyright/issues/11003):
    "pyright >= 1.1.407 ; python_full_version >= '3.14'",
]

[project.urls]
Documentation = "https://christophgietl.github.io/trcks/"
Issues = "https://github.com/christophgietl/trcks/issues"
Repository = "https://github.com/christophgietl/trcks.git"

[tool.importlinter]
exclude_type_checking_imports = false
include_external_packages = true
root_package = "trcks"

[[tool.importlinter.contracts]]
name = "Layers within trcks.*"
type = "layers"
containers = [
    "trcks",
]
exhaustive = true
layers = [
    "oop",
    "fp",
    "_typing",
]

[[tool.importlinter.contracts]]
name = "Layers within trcks.fp.*"
type = "layers"
containers = [
    "trcks.fp",
]
exhaustive = true
layers = [
    "monads",
    "composition",
]

[[tool.importlinter.contracts]]
name = "Layers within trcks.fp.monads.*"
type = "layers"
containers = [
    "trcks.fp.monads",
]
exhaustive = true
layers = [
    "awaitable_result",
    "awaitable",
    "result",
    "identity",
]

[[tool.importlinter.contracts]]
name = "Independence within trcks.fp.monads.*"
type = "independence"
modules = [
    "trcks.fp.monads.awaitable",
    "trcks.fp.monads.result",
]

[[tool.importlinter.contracts]]
name = "Import typing_extensions via trcks._typing only"
type = "protected"
allowed_importers = [
    "trcks._typing",
]
protected_modules = [
    "typing_extensions",
]

[tool.mypy]
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_unimported = true
disallow_redefinition = true
disallow_untyped_globals = true
files = "."
strict = true
strict_bytes = true  # will become the default in mypy 2.0
warn_incomplete_stub = true
warn_unreachable = true

[tool.pdm.version]
source = "scm"

[tool.pyright]
deprecateTypingAliases = true
enableTypeIgnoreComments = false
pythonVersion = "3.10"
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportImportCycles = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = true
reportUnusedCallResult = true
typeCheckingMode = "strict"

[tool.pytest.ini_options]
addopts = "--cov=trcks --cov-fail-under=100 --cov-report=term-missing --doctest-glob='*.md'"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
doctest_plus = "enabled"

[tool.ruff.lint]
ignore = [
    "COM812", # "may cause conflicts when used with the formatter"
    "D205", # forbids multiple lines at the beginning of a docstring
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "INP001", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
cache-keys = [
    { dir = "src" },
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } }, # needed by build-backend to derive package version from Git tags
]
required-version = "~=0.10.0"
